--- a/config.yml
+++ b/config.yml
@@ -3,5 +3,8 @@ personal_project: GameApp
 name: Taryn Hovenkamp
 repo_names:
   - GameApp
-1-models-from-data: 
+11-models-from-data: 
   - https://github.com/tarynmh/ATLAS-iOS-Fall-22/tree/main/ModelsTest
+
+10-ux-ui-criticism:
+  - https://www.youtube.com/watch?v=HwlW8_EoEKA
