--- a/config.yml
+++ b/config.yml
@@ -6,3 +6,6 @@ repo_names:
 
 10-ux-ui-criticism:
   - https://www.youtube.com/watch?v=HwlW8_EoEKA
+
+project-check-in-1:
+  - https://github.com/tarynmh/ATLAS-iOS-Fall-22/issues/2
